--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -58,8 +58,8 @@
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="/login">Login</a></li>
-            <li class="active"><a href="/logout">Logout</a></li>
+            <a href="/login/"><button type="button" class="btn btn-default navbar-btn">Sign In</button></a>
+            <a href="/logout/"><button type="button" class="btn btn-default navbar-btn">Sign Out</button></a>
           </ul>
 
         </div><!--/.nav-collapse -->
