--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -46,13 +46,14 @@
             <li class="dropdown">
               <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> User <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="/usercenter">UserCenter</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
+                <li class="dropdown-header">UserCenter</li>
+                <li><a href="/usercenter/">UserCenter</a></li>
+                <li><a href="">Another action</a></li>
+                <li><a href="">Something else here</a></li>
                 <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
+                <li class="dropdown-header">AdminCenter</li>
+                <li><a href="/admin/">Admin</a></li>
+
               </ul>
             </li>
           </ul>
