--- a/mysite/templates/usercenter.html
+++ b/mysite/templates/usercenter.html
@@ -24,8 +24,8 @@
   <p><strong>UserName:</strong> {{ item.name }}</p>
   <p><strong>Age:</strong> {{ item.age }}</p>
   <p><strong>E-mail:</strong>{{ item.email }}</p>
-  <p><strong>Address:</strong>{{ item.address }}</p>
-  <p><strong>Website:</strong> {{ item.website }}</p>
+  <p><strong>Address:</strong> {{ item.address }} </p>
+  <p><strong>Website:</strong> <a href="{{ item.website }}" target="_blank"> {{ item.website }} </a> </p>
   <hr>
   </div>
   
