--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -42,6 +42,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="/index">主页</a></li>
             <li><a href="/archives">Archives</a></li>
+            <li><a href="/article/">article</a></li>
             <li><a href="/test">Test</a></li>
             <li class="dropdown">
               <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> User <span class="caret"></span></a>
