--- a/mysite/templates/login.html
+++ b/mysite/templates/login.html
@@ -1,50 +1,50 @@
-{% extends 'base.html' %}
-{% block content %}
+<!DOCTYPE html>
+<html lang="zh-cn">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
+    <title>Signin</title>
 
-<p>{{ message }}</p>
-
-
-
-<div class="container-fluid">
-<div class="jumbotron">
-
-    <div class="row">
+    <!-- Bootstrap core CSS -->
+    <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     
-      <div class="col-md-1"></div>
-      <div class="col-md-7"></div>
-      <div class="col-md-3">
-          
-<form role="form" action="/login/" method="POST">
-	
-	{% csrf_token %}
-	
-  <div class="form-group">
-   
-    <label for="exampleInputText">UserName</label>
-    <input type="text" class="form-control" id="exampleInputText" placeholder="UserName" name="username">
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">PassWord</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password">
-  </div>
-  <div class="checkbox">
-    <label>
-      <input type="checkbox" name="remember_me" value="remember_me"> Remember Me
-    </label>
-  </div>
-  <button type="submit" class="btn btn-default">Login</button>
-</form>
+    <link href="/static/style.css" rel="stylesheet">
 
-      </div>
-      <div class="col-md-1"></div>
-      
-    </div>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="/static/jquery2.1.0.js"></script>
+    <script src="/static/bootstrap/js/bootstrap.min.js"></script>
 
-</div>
-</div>
+  </head>
 
+  <body>
+
+    <div class="container">
+<p class="text-center">{{ message }}</p>
+      <form class="form-signin" action="/login/" method="POST">
+      {% csrf_token %}
+        <h2 class="form-signin-heading"> 一个账号玩转所有服务 </h2>
+        <label for="inputText" class="sr-only">Email address</label>
+        <input type="text" id="inputEmail" class="form-control" placeholder="Username" required autofocus name="username">
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required name="password">
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" name="remember_me" value="remember-me"> Remember me
+          </label>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        
+      </form>
+
+    </div> <!-- /container -->
 
 
 
-{% endblock %}
+  </body>
+</html>
